--- a/flexBox/flexBox.css
+++ b/flexBox/flexBox.css
@@ -4,8 +4,14 @@ ul{
     
 }
 
+.logo{
+    display: flex;
+    align-items: center;
+
+}
+
 .menu{
-    margin-right: 50px;
+    margin-right: 150px;
 }
 
 li{
@@ -16,6 +22,35 @@ li{
 img{
     margin-top: 20px;
     margin-left: 30px;
-    height: 300px;
-    width: 300px;
+    height: 150px;
+    width: 150px;
 }
+
+.dudas {
+    width: 180px;
+    height: 50px;
+    background-color: rgba(0, 132, 255, 0.806);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .info{
+    width: 180px;
+    height: 50px;
+    background-color: rgba(0, 132, 255, 0.806);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+.inicio{
+    margin-left: 30px;
+    font-size: 14px;
+}
+
+ 
